Fixed luminosity contrast ratio for the form group toggle button.

--- a/src/themes/designer/styles/variables.scss
+++ b/src/themes/designer/styles/variables.scss
@@ -46,7 +46,7 @@ $balloon-background: $toolbox-background;
 
 /* Palette */
 $tab-selected-color: #A8CF45;
-$collapse-button-color: #91D8F7;
+$collapse-button-color: #5b5f61;
 $color-base: #5b5f61;
 $color-danger: #e46969;
 $color-info: #5b5f61;
